--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
 	<meta charset='UTF-8'>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
-	<title>bootcamp-test-task</title>
+	<title>Screen saver</title>
+	<link rel='stylesheet' href='./css/style.css'>
 </head>
 
 <body>
-<script src='./js/bootcamp-test-task'></script>
+	<div id='app'>
+	</div>
+	<script src='./js/index.js'></script>
 </body>
 
 </html>
